@@ -51,7 +51,7 @@
       </RECENT>
     </XmlConvertableProperty>
     <XmlConvertableProperty key="SharpDevelop.Gui.MainWindow.WindowState">
-      <WINDOWSTATE FULLSCREEN="False" STATE="Maximized">523|21|640|480</WINDOWSTATE>
+      <WINDOWSTATE FULLSCREEN="False" STATE="Maximized">0|0|640|480</WINDOWSTATE>
     </XmlConvertableProperty>
     <Property key="SharpDevelop.Gui.HelpFileGenerator.HtmlHelpCompilerFilename" value="C:\Program Files\HTML Help Workshop\hhc.exe" />
     <XmlConvertableProperty key="SharpDevelop.Workbench.WorkbenchMemento">
